# TFM_NAS

./: .gitignore  2026-06-17-153115-this-session-is-being-continued-from-a-previous-c.txt  CLAUDE.md  CP33_BACKENDS.md  PROJECT.md  PROJECT_PLAN.md  README.md  config.yaml  conftest.py  last_experiments.txt  peer_review_simulation.md  procedure.md  pyproject.toml  requirements-dev.txt  requirements-nas.txt  requirements.txt
.github/workflows/: ci.yml
catalog/: README.md  __init__.py  blocks.py  contracts.py  flops.py  mbconv.py  ofa_mbv3.py  seg_det.py  shapes.py  sweep.py
cloud/: colab_job.sh  colab_pull.sh  lightning_job.py
colab/: README.md  TFM_NAS_colab.ipynb  anchor_b.py  colab_common.py  run_colab.py  run_dense_nas.py  run_prune_graft.py  train_teacher.py
dataset/: SCHEMA.md
detect/: __init__.py  adapter.py  evaluate.py  export_baseline_onnx.py  export_grafted_onnx.py  neck.py  pose_model.py  train_baseline.py
distill/: README.md  kd_feat.py  kd_loss.py
docs/: cpu_cross_device_rank_check_2026-07-15.md
docs/research/: stageR_expansion_cost.md  stageR_graft_interface.md  stageR_prune_kd_edge.md
eval/: README.md  candidate_proxy.py  full_finetune.py  graft_ablate.py  imagenet_sanity.py  proxy_rank.py  shortft.py  verify_winner.py  zerocost.py
expand/: screen_r50.py
figs/: loss_landscape.py
jetson/: Dockerfile  README.md  deploy.sh  run_search.py
kaggle/: README.md  cache-metadata.json  dataset-metadata.json  kernel-metadata.json  push.sh  run.py
lut/: README.md  loader.py
lut/bench/: Dockerfile.runner  build_engine.py  device_probe.sh  e2e_run.py  run_bench.py
lut/docs/: jetson_640_runbook.md  schema.md
lut/export/: to_onnx.py
lut/orchestrate/: audit_e2e.py  bench_model.py  contention_bench.py  cpu_bench.py  cpu_ort.py  cpu_pairs.py  cpu_rank_report.py  e2e_bench.py  gen_dummy_lut.py  measure_additivity.py  probe_device.py  resume.py  run_sweep.py  ssh_client.py
mcu/: BOARD.md  Dockerfile  README.md  build.sh  cycle_oracle.py  export_baseline.py  export_pruned.py  fetch_tiler.sh  mcu_screen.py  prep_calib.py  res_screen.py  run.sh  smoke.sh
mcu/board/: README.md  bench_receiver.py  build_bench.sh  docker_make.sh  flash_bench.sh
mcu/patches/: 0001-nntool-no-expression-conv-fusion.patch
mcu/probes/: cyc_probe.sh  gen_probe.sh  open_probe.sh  quant_probe.sh
mcu/screens/: a5fddcc_denoise.json  wave1.json  wave1_finals.json  wave1_finals_read.md  wave2_finals.json  wave2_proxy_set.json
models/: README.md  benchmark.txt
models/dense_nas/: README.md
models/graft_pruned/: README.md  recover_graft_result.json
models/res224/: README.md  graft_backbone_224.meta.json  graft_backbone_224_mcu.meta.json  graft_noneck_224.meta.json  graft_noneck_224_mcu.meta.json  graft_noneck_224_op12.meta.json  graft_raw_224_mcu.meta.json  yolo11n_pose_224_raw.meta.json
models/screen_prune_graft/: README.md  graft_prune_r20_e2e_640.meta.json  graft_prune_r40_e2e_640.meta.json  screen_prune_graft.json  (+2 more)
nas-course/: _base.html  index.html  main.js
net2net/: bn.py  deeper.py  graft_init.py  wider.py
prune/: allocate.py  allocate_dense.py  allocate_v2.py  prune_baseline.py  prune_graft.py  recover_graft.py  screen_prune_graft.py  yolo_tp_prep.py
scripts/: bench_beatn_probes.sh  check.sh  sanity_check.sh  setup_jetson.sh  setup_laptop.sh  setup_laptop_nas.sh  teardown_jetson.sh
search/: additivity640.py  additivity_preview.py  arch_to_blocks.py  bo.py  build_acc_memo.py  cost.py  cost_preview.py  denoise.py  denoise_report.py  dense_family.py  dense_latency_fit.json  dense_nas.py  evolution.py  export_subnet.py  graft_latency_fit.json  latency_model.py  latency_model_fit.json  objective.py  pose_offset.py  predictor_stats.py  select_winner.py  space.py  stamp_winner_e2e.py  stamp_winner_v2.py  tpe.py  validate_additivity.py
state/: plan_state.yaml
supernet/: README.md  download_ofa.py  pose_backbone.py  sampler.py
tests/: test_additivity640.py  test_allocate.py  test_allocate_dense.py  test_allocate_v2.py  test_arch_to_blocks.py  test_arch_validation.py  test_audit_e2e.py  test_bench_model.py  test_bench_parse.py  test_bench_receiver.py  test_bn.py  test_bo.py  test_candidate_proxy.py  test_catalog.py  test_contention_bench.py  test_cost.py  test_cost_preview.py  test_cpu_bench.py  test_cpu_ort.py  test_cpu_pairs.py  test_cpu_rank_report.py  test_cycle_oracle.py  test_deeper.py  test_denoise.py  test_denoise_report.py  test_dense_family.py  test_dense_nas.py  test_evolution.py  test_export_grafted_onnx.py  test_export_subnet.py  test_flops_golden.py  test_full_finetune.py  test_graft_ablate.py  test_graft_init.py  test_grafted_pose_model.py  test_imagenet_sanity.py  test_kd_feat.py  test_kd_loss.py  test_latency_model.py  test_loader.py  (+38 more)
(+44 files in other folders)
