# Tool configuration only — this repo is intentionally NOT packaged.
# Runtime invocation is `python -m <pkg>.<mod>` from the repo root (see
# CLAUDE.md); tests gain importability via the root conftest.py. There is
# deliberately no [project] table: `pip install -e .` would install flat
# top-level packages with generic names (catalog, search, eval, ...) into
# site-packages, which invites collisions for no benefit.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: full-catalog tests (~20-25 s); deselect with -m 'not slow'",
]

[tool.ruff]
line-length = 100
# py310, NOT the laptop's py312: the AGX Docker kit (`jetson/Dockerfile`, base
# ultralytics:latest-jetson-jetpack6) ships Python 3.10, and it runs the NAS source
# tree wholesale (prune/, search/, detect/, eval/). Declaring py312 made ruff's UP
# ruleset demand 3.11+ idioms that crash there: UP017 rewrites `dt.timezone.utc` ->
# `dt.UTC`, which is 3.11+, and that is exactly what killed a finished 100-epoch AGX
# run at the final report-writing line (2026-07-16 — the training was already done).
# 85b896e fixed the 25 call sites; this line stops `ruff --fix` re-breaking them.
target-version = "py310"
# nas-course/ is HTML course material; lut/bench/ runs on the Jetson inside
# Docker and is deployed separately — local lint churn there buys nothing.
# yolo-ros2-inference/ is the user's separate ROS2 deployment package (its own
# git repo + lint conventions); it's a reference/teacher stack, not NAS source.
# The Colab notebook is glue with cell-scoped imports + `!`-magics that can't
# satisfy import-ordering across cells; its committed .py scripts stay linted.
extend-exclude = ["nas-course", "lut/bench", "yolo-ros2-inference", "colab/TFM_NAS_colab.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export names for the package's public API.
"**/__init__.py" = ["F401"]
# The repo targets py312, but this module must also import on the Jetson JetPack-6
# base image (Python 3.10), where NotRequired needs the typing_extensions fallback.
# The version guard is deliberate — exempt it from ruff's "you're on 3.11+" rules.
"catalog/contracts.py" = ["UP035", "UP036"]

[tool.mypy]
python_version = "3.12"
files = ["catalog", "detect", "eval", "expand", "net2net", "prune", "search", "supernet", "lut", "tests"]
exclude = "lut/bench/"

[[tool.mypy.overrides]]
# ofa/torchvision/ultralytics live only in .venv-nas; fabric/tqdm/yaml/pandas/scipy/pymoo/botorch/
# gpytorch/onnx/onnxruntime ship no (complete) type stubs (numpy does; pandas-stubs is a separate
# opt-in package we don't depend on).
module = ["ofa.*", "torchvision.*", "ultralytics.*", "fabric.*", "tqdm.*", "yaml.*",
          "pandas.*", "scipy.*", "pymoo.*", "botorch.*", "gpytorch.*", "torch_pruning.*",
          "onnx.*", "onnxruntime.*"]
ignore_missing_imports = true
